--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,16 @@
           <artifactId>commons-io</artifactId>
           <version>2.1</version>
       </dependency>
+      <dependency>
+          <groupId>org.jgrapht</groupId>
+          <artifactId>jgrapht-core</artifactId>
+          <version>1.0.1</version>
+      </dependency>
+      <dependency>
+          <groupId>org.jgrapht</groupId>
+          <artifactId>jgrapht-ext</artifactId>
+          <version>1.0.1</version>
+      </dependency>
   </dependencies>
     <properties>
         <maven.compiler.source>18</maven.compiler.source>
