--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,14 @@
           <groupId>org.jgrapht</groupId>
           <artifactId>jgrapht-ext</artifactId>
           <version>1.0.1</version>
+
       </dependency>
+          <dependency>
+              <groupId>fr.inria.gforge.spoon</groupId>
+              <artifactId>spoon-core</artifactId>
+              <version>8.0.0</version>
+          </dependency>
+
   </dependencies>
     <properties>
         <maven.compiler.source>18</maven.compiler.source>
